--- a/lib/theme-chalk/aside.css
+++ b/lib/theme-chalk/aside.css
@@ -1,1 +1,1 @@
-.el-aside{overflow:auto;-webkit-box-sizing:border-box;box-sizing:border-box;-ms-flex-negative:0;flex-shrink:0}
+@charset "UTF-8";.el-aside{overflow:auto;-webkit-box-sizing:border-box;box-sizing:border-box;-ms-flex-negative:0;flex-shrink:0}
