--- a/lib/theme-chalk/radio-group.css
+++ b/lib/theme-chalk/radio-group.css
@@ -1,1 +1,1 @@
-.el-radio-group{display:inline-block;line-height:1;vertical-align:middle;font-size:0}
+@charset "UTF-8";.el-radio-group{display:inline-block;line-height:1;vertical-align:middle;font-size:0}
