--- a/packages/theme-chalk/lib/timeline.css
+++ b/packages/theme-chalk/lib/timeline.css
@@ -1,1 +1,1 @@
-.el-timeline{margin:0;font-size:14px;list-style:none}.el-timeline .el-timeline-item:last-child .el-timeline-item__tail{display:none}
+@charset "UTF-8";.el-timeline{margin:0;font-size:14px;list-style:none}.el-timeline .el-timeline-item:last-child .el-timeline-item__tail{display:none}
