--- a/packages/theme-chalk/src/progress.scss
+++ b/packages/theme-chalk/src/progress.scss
@@ -3,10 +3,12 @@
 @import "common/var";
 
 @include b(progress) {
+  // .el-progress
   position: relative;
   line-height: 1;
 
   @include e(text) {
+    // .el-progress__text
     font-size:14px;
     color: $--color-text-regular;
     display: inline-block;
@@ -21,6 +23,7 @@
   }
 
   @include m((circle,dashboard)) {
+    // .el-progress--circle    .el-progress--dashboard
     display: inline-block;
 
     .el-progress__text {
@@ -41,6 +44,7 @@
 
 
   @include m(without-text) {
+    // .el-progress--without-text
     .el-progress__text {
       display: none;
     }
@@ -53,6 +57,7 @@
   }
 
   @include m(text-inside) {
+    // .el-progress--text-inside
     .el-progress-bar {
       padding-right: 0;
       margin-right: 0;
@@ -60,7 +65,8 @@
   }
 
   @include when(success) {
-    .el-progress-bar__inner {
+    // .el-progress.is-success
+    .el-progress-bar__bar {
       background-color: $--color-success;
     }
 
@@ -70,7 +76,8 @@
   }
 
   @include when(warning) {
-    .el-progress-bar__inner {
+    // .el-progress.is-warning
+    .el-progress-bar__bar {
       background-color: $--color-warning;
     }
 
@@ -80,7 +87,8 @@
   }
 
   @include when(exception) {
-    .el-progress-bar__inner {
+    // .el-progress.is-exception
+    .el-progress-bar__bar {
       background-color: $--color-danger;
     }
 
@@ -91,6 +99,7 @@
 }
 
 @include b(progress-bar) {
+  // el-progress-bar
   padding-right: 50px;
   display: inline-block;
   vertical-align: middle;
@@ -99,6 +108,7 @@
   box-sizing: border-box;
 
   @include e(outer) {
+    // el-progress-bar__outer
     height: 6px;
     border-radius: 100px;
     background-color: $--border-color-lighter;
@@ -107,27 +117,56 @@
     vertical-align: middle;
   }
   @include e(inner) {
+    // el-progress-bar__inner
     position: absolute;
     left: 0;
     top: 0;
     height: 100%;
-    background-color: $--color-primary;
     text-align: right;
+
+    @include utils-vertical-center;
+  }
+
+  @include e(bar) {
+    // el-progress-bar__animation
+    position: absolute;
+    left: 0;
+    top: 0;
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    background-color: $--color-primary;
     border-radius: 100px;
     line-height: 1;
     white-space: nowrap;
     transition: width 0.6s ease;
 
-    @include utils-vertical-center;
+    @include when(transform) {
+      animation: flash 1s ease-in-out .5s 1 forwards; 
+    }
+    
+  }  
+
+  @include e(animation) {
+    // el-progress-bar__animation
+    position: absolute;
+    left: 0;
+    top: 0;
+    display: inline-block;
+    background-color: $--color-white;
+    filter: blur(25px);
+    animation: flash 5s ease-in-out .5s infinite alternate;
   }
 
   @include e(innerText) {
+    // el-progress-bar__innerText
     display: inline-block;
     vertical-align: middle;
     color: $--color-white;
-    font-size: 12px;
     margin: 0 5px;
   }
+
+
 }
 
 @keyframes progress {
@@ -139,3 +178,15 @@
     background-position: 32px 0;
   }
 }
+
+// 进度条过渡/动画
+@keyframes flash {
+  0% {
+    width: 0%;
+  }
+
+  100% {
+    width: 100%;
+  }
+}
+
