--- a/packages/theme-chalk/src/progress.scss
+++ b/packages/theme-chalk/src/progress.scss
@@ -141,7 +141,7 @@
     white-space: nowrap;
     transition: width 0.6s ease;
 
-    @include when(transform) {
+    @include when(transition) {
       animation: flash 1s ease-in-out .5s 1 forwards; 
     }
     
