--- a/packages/theme-chalk/src/index.scss
+++ b/packages/theme-chalk/src/index.scss
@@ -87,3 +87,5 @@
 @import "./result.scss";
 @import "./qrcode.scss";
 @import "./number.scss";
+@import "./notice.scss";
+@import "./water-mark.scss";
